--- a/clase02/style/style.css
+++ b/clase02/style/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: #333;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: white;
     box-sizing: border-box;
