--- a/clase02/style/validar-style.css
+++ b/clase02/style/validar-style.css
@@ -1,3 +1,15 @@
-.name{
-    
+.campo:valid + .icon {
+    color: green;
+}
+
+.campo:valid {
+    border-color: green;
+}
+
+.campo:invalid + .icon {
+    color: red;
+}
+
+.campo:invalid {
+    border-color: red;
 }
