--- a/EjercicioPractico/hotel/css/estilo_sistema.css
+++ b/EjercicioPractico/hotel/css/estilo_sistema.css
@@ -1,3 +1,5 @@
+@import url(_variables.css);
+
 *{
     margin: 0;
     padding: 0;
@@ -27,7 +29,7 @@ header{
     padding: 10px 0;
     width: 100%;
     /* background-image: linear-gradient(to right, ); */
-    background-image: url(../img/footergra.avif);
+    background-color: var(--color-nav);
     text-align: center;
 }
 
@@ -88,4 +90,156 @@ header span{
         opacity: 1;
         top: 0px;
     }
+}
+
+.contenido{
+    text-align: center;
+}
+
+.formulario form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h2{
+    font-size: 50px;
+    color: bisque;
+    text-shadow: 3px 3px 10px var(--color-nav);
+}
+
+label{
+    padding: 2%;
+    font-size: 30px;
+}
+
+.datoss{
+    width: 400px;
+    height: 35px;
+    outline-color: #6278F7;
+}
+
+.btn_enviar{
+    margin: 20px 0 0 0;
+    background-color: var(--color-nav);
+    color: white;
+    padding: 15px;
+    border-radius: 10%;
+    border: none;
+    font-size: 150%;
+}
+
+/* servicios */
+
+#servicios{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-image: url(../img/hotelServ.jpg);
+}
+
+.bloque h2{
+    text-align: center;
+}
+
+.container{
+    position: relative;
+    width: 70%;
+    height: 85%;
+    color:aliceblue;
+}
+.servicios{
+    display: flex;
+    width: 100%;
+    height: 95%;
+
+}
+.service{
+    position: relative;
+    height: 100%;
+    width: 25%;
+    transition: all 0.5s ease-in-out;
+    overflow: hidden;
+    cursor: pointer;
+    margin: 0px 2px 0px 2px;
+    text-align: center;
+}
+.service img{
+    position: relative;
+    width: 200%;
+    height: 100%;
+    transition: 2s;
+}
+.service img:hover{
+    transform: translateX(-30%);
+    filter: brightness(20%);
+}
+.text{
+    position: absolute;
+    top: 40%;
+    left: 20%;
+    font-weight: 700;
+    font-size: 30px;
+    color: transparent;
+    transition: all 0.5 ease-in-out;
+}
+.service:hover{
+    width: 40%;
+}
+.service:hover .text{
+    color: aliceblue;
+    transform: scale(1);
+}
+
+/* reservas */
+
+#reservas{
+    background-image: url(../img/hotelReser.jpg);
+    width: 100vw;
+    padding: 50px 0 0 0;
+    flex-shrink: 0;
+    height: 100vh;
+}
+
+
+/* contacto */
+
+#contactos{
+    background-image: url(../img/hotelCon.jpg);
+    width: 100vw;
+    padding: 50px 0 0 0;
+    flex-shrink: 0;
+    height: 100vh;
+}
+
+
+/* registro */
+
+#registro{
+    background-image: url(../img/hotelRegi.jpg);
+    width: 100vw;
+    padding: 50px 0 0 0;
+    flex-shrink: 0;
+    height: 100vh;
+    color: white;
+}
+
+.acept{
+    align-items: center;
+}
+
+.acept label{
+    text-shadow: 3px 3px 10px brown;
+}
+
+.txt{
+    text-shadow: 3px 3px 10px rgb(248, 0, 0);
+    font-weight: 700;
 }
