--- a/EjercicioPractico/hotel/css/estilo_sistema.css
+++ b/EjercicioPractico/hotel/css/estilo_sistema.css
@@ -208,6 +208,10 @@ label{
     height: 100vh;
 }
 
+#reservas p{
+    color: white;
+    font-size: 30px;
+}
 
 /* contacto */
 
@@ -217,6 +221,10 @@ label{
     padding: 50px 0 0 0;
     flex-shrink: 0;
     height: 100vh;
+}
+
+#contactos h3, #contactos .formulario, .icono{
+    color: white;
 }
 
 
